# python_web_hw13

django_app/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
django_app/docker/: app.sh
django_app/notes/: .env
django_app/notes/noteapp/: forms.py  models.py  urls.py  views.py
django_app/notes/noteapp/migrations/: 0002_author_remove_note_name_alter_note_description_and_more.py
django_app/notes/noteapp/migrations copy/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py  0005_remove_note_authors_note_author_and_more.py
django_app/notes/noteapp/migrations_old/: 0002_author_remove_note_name_alter_note_description_and_more.py  0003_alter_author_description.py  0004_alter_note_description.py  0006_merge_20231227_1850.py  0007_alter_tag_name.py
django_app/notes/noteapp/templatetags/: extract_authors.py  extract_tags.py
django_app/notes/notes/: settings.py  urls.py
django_app/notes/users/: forms.py  views.py
django_app/notes/users/migrations/: 0001_initial.py
django_app/postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
django_app/postgres-data/base/5/: 1247  1249  1259  16384  16385  16390  16392  16393  16396  16398  16400  16401  16404  16406  16410  16412  16414  16418  16420  16421  16424  16426  16428  16434  16438  16440  16447  16448  16449  16461  16462  16463  16476  16478  16490  16491  16492  16498  16517  16521  (+63 more)
django_app/postgres-data/global/: 1260  pg_control  pg_internal.init
django_app/postgres-data/pg_stat/: pgstat.stat
fastapi_app/: main.py  pyproject.toml
(+22 files in other folders)
